add dumb tab icon

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- change tab icon to something cool -->
-  <title>GRB</title>
+<title>GRB</title>
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
